--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "eslint-plugin-standard": "^3.1.0",
     "is-primitive": "^3.0.0",
     "lodash-es": "^4.17.10",
+    "normalize.css": "^8.0.0",
+    "pre-commit": "^1.2.2",
     "prop-types": "^15.6.1",
     "ramda": "^0.25.0",
+    "raw-loader": "^0.5.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.4",
+    "spectacle": "^4.2.3",
+    "spectacle-code-slide": "^0.5.2",
     "type-detect": "^4.0.8"
   },
   "scripts": {
@@ -25,5 +30,8 @@
     "build": "react-scripts build",
     "test": "eslint --fix ./src && react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "pre-commit": [
+    "test"
+  ]
 }
