--- a/package.json
+++ b/package.json
@@ -17,21 +17,20 @@
     "pre-commit": "^1.2.2",
     "prop-types": "^15.6.1",
     "ramda": "^0.25.0",
-    "raw-loader": "^0.5.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.4",
     "spectacle": "^4.2.3",
-    "spectacle-code-slide": "^0.5.2",
     "type-detect": "^4.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "eslint --fix ./src && react-scripts test --env=jsdom",
+    "test:comit": "CI=true npm test",
     "eject": "react-scripts eject"
   },
   "pre-commit": [
-    "test"
+    "test:comit"
   ]
 }
