--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "build-index": "^0.2.2",
+    "common-tags": "^1.7.2",
     "eslint": "^4.19.1",
     "eslint-config-standard": "^11.0.0",
     "eslint-config-standard-react": "^6.0.0",
@@ -20,7 +21,6 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.4",
-    "spectacle": "^4.2.3",
     "type-detect": "^4.0.8"
   },
   "scripts": {
