--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pre-commit": "^1.2.2",
     "prop-types": "^15.6.1",
     "ramda": "^0.25.0",
+    "re-template-tag": "^2.0.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.4",
