--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "re-template-tag": "^2.0.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-powerplug": "^1.0.0-alpha.7",
     "react-scripts": "1.1.4",
     "type-detect": "^4.0.8"
   },
