--- a/package.json
+++ b/package.json
@@ -3,38 +3,145 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "babel-eslint": "^8.2.3",
+    "autoprefixer": "7.1.6",
+    "babel-core": "6.26.0",
+    "babel-eslint": "7.2.3",
+    "babel-jest": "20.0.3",
+    "babel-loader": "7.1.2",
+    "babel-preset-react-app": "^3.1.0",
+    "babel-runtime": "6.26.0",
     "build-index": "^0.2.2",
+    "case-sensitive-paths-webpack-plugin": "2.1.1",
+    "chalk": "1.1.3",
     "common-tags": "^1.7.2",
-    "eslint": "^4.19.1",
+    "css-loader": "0.28.7",
+    "dotenv": "^4.0.0",
+    "eslint": "4.19.1",
+    "eslint-config-react-app": "^2.0.1",
     "eslint-config-standard": "^11.0.0",
     "eslint-config-standard-react": "^6.0.0",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-flowtype": "2.39.1",
     "eslint-plugin-fp": "^2.3.0",
+    "eslint-plugin-import": "2.8.0",
+    "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-react": "7.4.0",
     "eslint-plugin-standard": "^3.1.0",
+    "extract-text-webpack-plugin": "3.0.2",
+    "file-loader": "1.1.5",
+    "fs-extra": "3.0.1",
+    "html-webpack-plugin": "2.29.0",
     "is-primitive": "^3.0.0",
+    "jest": "20.0.4",
     "lodash-es": "^4.17.10",
-    "normalize.css": "^8.0.0",
+    "normalize.css": "7.0.0",
+    "object-assign": "4.1.1",
+    "postcss-flexbugs-fixes": "3.2.0",
+    "postcss-loader": "2.0.8",
     "pre-commit": "^1.2.2",
+    "promise": "8.0.1",
     "prop-types": "^15.6.1",
+    "raf": "3.4.0",
     "ramda": "^0.25.0",
     "re-template-tag": "^2.0.1",
     "react": "^16.3.2",
+    "react-dev-utils": "^4.2.1",
     "react-dom": "^16.3.2",
     "react-powerplug": "^1.0.0-alpha.7",
     "react-scripts": "1.1.4",
-    "type-detect": "^4.0.8"
+    "spectacle": "^4.0.0",
+    "style-loader": "0.19.0",
+    "sw-precache-webpack-plugin": "0.11.4",
+    "type-detect": "^4.0.8",
+    "url-loader": "0.6.2",
+    "webpack": "3.8.1",
+    "webpack-dev-server": "2.9.4",
+    "webpack-manifest-plugin": "1.3.2",
+    "whatwg-fetch": "2.0.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "eslint --quiet --fix ./src && react-scripts test --env=jsdom",
+    "start": "node scripts/start.js",
+    "build": "node scripts/build.js",
+    "test": "eslint --quiet --fix ./src && node scripts/test.js --env=jsdom",
     "test:comit": "CI=true npm test",
-    "eject": "react-scripts eject",
     "addIndexTo": "npx create-index"
   },
   "pre-commit": [
     "test:comit"
-  ]
+  ],
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx,mjs}"
+    ],
+    "setupFiles": [
+      "<rootDir>/config/polyfills.js"
+    ],
+    "testMatch": [
+      "<rootDir>/src/**/__tests__/**/*.{js,jsx,mjs}",
+      "<rootDir>/src/**/?(*.)(spec|test).{js,jsx,mjs}"
+    ],
+    "testEnvironment": "node",
+    "testURL": "http://localhost",
+    "transform": {
+      "^.+\\.(js|jsx|mjs)$": "<rootDir>/node_modules/babel-jest",
+      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
+      "^(?!.*\\.(js|jsx|mjs|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
+    },
+    "transformIgnorePatterns": [
+      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs)$"
+    ],
+    "moduleNameMapper": {
+      "^react-native$": "react-native-web"
+    },
+    "moduleFileExtensions": [
+      "web.js",
+      "mjs",
+      "js",
+      "json",
+      "web.jsx",
+      "jsx",
+      "node"
+    ]
+  },
+  "babel": {
+        "env": {
+          "development": {
+            "plugins":[
+              "babel-plugin-transform-es2015-destructuring",
+              "babel-plugin-transform-class-properties",
+              [ "babel-plugin-transform-object-rest-spread",
+                {
+                  "useBuiltIns": true
+                }
+              ],
+              [
+                "babel-plugin-transform-runtime",
+                {
+                  "helpers": false,
+                  "polyfill": false,
+                  "regenerator": true
+                }
+              ],
+              [
+                "babel-plugin-transform-regenerator",
+                {
+                  "async": false
+                }
+              ],
+              "babel-plugin-syntax-dynamic-import"
+            ],
+            "presets": [
+              [ "env", {
+                "targets": {
+                  "chrome": 52
+                },
+                "modules": false,
+                "loose": true
+              } ],
+              "react"
+            ]
+          }
+        }
+      }
 }
