--- a/package.json
+++ b/package.json
@@ -44,13 +44,14 @@
     "prop-types": "^15.6.1",
     "raf": "3.4.0",
     "ramda": "^0.25.0",
+    "raw-loader": "^0.5.1",
     "re-template-tag": "^2.0.1",
     "react": "^16.3.2",
     "react-dev-utils": "^4.2.1",
     "react-dom": "^16.3.2",
     "react-powerplug": "^1.0.0-alpha.7",
     "react-scripts": "1.1.4",
-    "spectacle": "^4.0.0",
+    "spectacle": "https://github.com/easilyBaffled/spectacle.git",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "type-detect": "^4.0.8",
