--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "pre-commit": "^1.2.2",
+    "prettier": "^1.13.5",
     "promise": "8.0.1",
     "prop-types": "^15.6.1",
     "raf": "3.4.0",
