--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react": "^16.3.2",
     "react-dev-utils": "^4.2.1",
     "react-dom": "^16.3.2",
+    "react-gravatar": "^2.6.3",
     "react-powerplug": "^1.0.0-alpha.7",
     "react-scripts": "1.1.4",
     "spectacle": "https://github.com/easilyBaffled/spectacle.git",
