--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
-    "babel-eslint": "7.2.3",
+    "babel-eslint": "^8.2.3",
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.2",
     "babel-preset-react-app": "^3.1.0",
@@ -31,6 +31,7 @@
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
+    "g": "^2.0.1",
     "html-webpack-plugin": "2.29.0",
     "is-primitive": "^3.0.0",
     "jest": "20.0.4",
@@ -67,6 +68,7 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "eslint --quiet --fix ./src && node scripts/test.js --env=jsdom",
+    "test:pret": "prettier --write src/slides/**/*.js",
     "test:comit": "CI=true npm test",
     "addIndexTo": "npx create-index"
   },
